--- a/Random_Quote_Generator/main.css
+++ b/Random_Quote_Generator/main.css
@@ -25,3 +25,10 @@
     color: grey;
     padding: 10px;
 }
+.card img{
+    width: 50px;
+    height: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
